compiler/testData/diagnostics/testsWithJsStdLib/jvmDeclarations/cloneable.fir.kt
import kotlin.<!UNRESOLVED_IMPORT!>Cloneable<!>

fun cloneable(): <!UNRESOLVED_REFERENCE!>Cloneable<!> = intArrayOf(42)
